--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,153 @@ nav {
 
 .menu a {
   display: block;
+  margin: auto;
+  padding: 10px 1.5em;
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s;
+  text-align: end;
+  border: #ffffff solid 2px;
+  border-radius: 2em;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.menu a:hover {
+  color: #151414;
+}
+
+.burger {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger .line {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+  margin-bottom: 5px;
+  transition: 0.2s linear;
+}
+.burger {
+  display: none;
+}
+@media screen and (width < 800px) {
+  .menu {
+    display: none;
+  }
+  .burger {
+    display: block;
+    background-color: transparent;
+    border: 0;
+  }
+  .burger.active .line:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+    transition: 0.2s linear;
+  }
+
+  .burger.active .line:nth-child(2) {
+    opacity: 0;
+    transition: 0.15s linear;
+  }
+
+  .burger.active .line:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+    transition: 0.2s linear;
+  }
+
+  nav.active .menu {
+    display: block;
+    background-color: #615f5f;
+    position: absolute;
+    top: 94px;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+
+  nav.active .menu li {
+    margin: 10px 20px;
+  }
+
+  nav.active .menu a {
+    font-size: 24px;
+  }
+}
+
+/*      NY MENU STYLING  */
+
+.hero {
+  position: relative;
+  height: 70vh;
+  background-image: url("../img/img_justy/flower_vidviid.gif");
+
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* overlay som rigtigt element */
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.25);
+}
+
+.hero h1 {
+  position: relative;
+  color: white;
+  font-size: 4rem;
+  font-family: "Merriweather", serif;
+  z-index: 1;
+}
+
+/*          STYLING OF THE SHOPPING ICON       */
+#cart-icon {
+  font-size: 30px;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+}
+
+/*                styling of second image            */
+
+img {
+  display: block;
+  margin: 0 auto 2em; /* tilføjet til auto setting, så billede ikke går ud over fældt. */
+  max-width: fit-content;
+  max-width: 100%;
+  height: auto;
+  border-radius: 2em;
+}
+
+/* 
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin-right: 20px;
+}
+
+.menu li:last-child {
+  margin-right: 0;
+}
+
+.menu a {
+  display: block;
   padding: 10px;
   color: #333333;
   text-decoration: none;
@@ -112,4 +259,4 @@ nav {
   nav.active .menu a {
     font-size: 24px;
   }
-}
+} */
