--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body {
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.6;
+  background-color: #e6e3db;
+}
+/*          Hero section styling      */
+
 * {
   margin: 0;
   padding: 0;
@@ -5,19 +12,36 @@
 }
 
 header {
-  position: sticky;
   top: 0;
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 20px;
-  background-color: #ffffff;
+
+  background-color: #605c5c;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  object-fit: cover;
 }
 
+/*            SVG logos STYLING AND SIZE */
+
 .logo img {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
+}
+
+.wax {
+  width: 500px;
+  height: 300px;
+  margin: auto;
+  display: block;
+  align-content: center;
+
+  max-width: fit-content;
+}
+
+.wax img {
+  width: 60%;
+  height: 60%;
 }
 
 nav {
@@ -166,97 +190,11 @@ img {
   border-radius: 2em;
 }
 
-/* 
-nav {
-  display: flex;
-  align-items: center;
+#second img {
+  width: 400px;
 }
 
-.menu {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+#third img {
+  width: 700px;
+  margin-top: 2em;
 }
-
-.menu li {
-  margin-right: 20px;
-}
-
-.menu li:last-child {
-  margin-right: 0;
-}
-
-.menu a {
-  display: block;
-  padding: 10px;
-  color: #333333;
-  text-decoration: none;
-  transition: color 0.3s;
-  text-align: end;
-}
-
-.menu a:hover {
-  color: #ff0000;
-}
-
-.burger {
-  width: 30px;
-  height: 20px;
-  cursor: pointer;
-}
-
-.burger .line {
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #333333;
-  margin-bottom: 5px;
-  transition: 0.2s linear;
-}
-.burger {
-  display: none;
-}
-@media screen and (width < 800px) {
-  .menu {
-    display: none;
-  }
-  .burger {
-    display: block;
-    background-color: transparent;
-    border: 0;
-  }
-  .burger.active .line:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-    transition: 0.2s linear;
-  }
-
-  .burger.active .line:nth-child(2) {
-    opacity: 0;
-    transition: 0.15s linear;
-  }
-
-  .burger.active .line:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-    transition: 0.2s linear;
-  }
-
-  nav.active .menu {
-    display: block;
-    background-color: #ffffff;
-    position: absolute;
-    top: 94px;
-    left: 0;
-    width: 100%;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-  }
-
-  nav.active .menu li {
-    margin: 10px 20px;
-  }
-
-  nav.active .menu a {
-    font-size: 24px;
-  }
-} */
