--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header {
   justify-content: space-evenly;
   align-items: center;
 
-  background-color: #605c5c;
+  background-color: transparent;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   object-fit: cover;
 }
