--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ nav {
   position: relative;
   color: white;
   font-size: 4rem;
-  font-family: "Merriweather", serif;
+  font-family: bastliga one;
   z-index: 1;
   margin: auto;
 }
