--- a/css/fonts.css
+++ b/css/fonts.css
@@ -80,12 +80,23 @@
   margin: 2em 0 0 0;
 } */
 
+svg {
+  width: 40ch;
+}
+
 h2 {
   font-family: moralana;
   text-align: center;
-  color: rgb(106 41 49);
+  color: rgb(0, 0, 0);
   padding: 10px;
   margin: 10px;
+}
+.hvid h2 {
+  font-family: moralana;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  margin: 0px;
 }
 
 .overlap h2,
@@ -98,6 +109,11 @@ h3 {
   text-align: center;
   color: rgba(0, 0, 0, 8);
 }
+.andenlys h3 {
+  font-family: brillant;
+  text-align: center;
+  color: rgba(255, 255, 255, 8);
+}
 p {
   font-family: Montserrat;
   text-align: center;
@@ -108,6 +124,19 @@ p {
   margin: 0 auto 1.5em;
   font-size: 1.1rem;
   color: rgb(1, 1, 2);
+  line-height: 1.5;
+  text-align: center;
+}
+.lys p {
+  font-family: Montserrat;
+  text-align: center;
+  color: rgba(0, 0, 0, 8);
+  max-width: 80ch;
+
+  padding: 0.5em 1em;
+  margin: 0 auto 1.5em;
+  font-size: 1.1rem;
+  color: rgb(203, 203, 204);
   line-height: 1.5;
   text-align: center;
 }
