ændre h1 og tilføjet svg

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ nav {
 .hero h1 {
   position: relative;
   color: white;
-  font-size: 4rem;
+  font-size: 7em;
   font-family: blow brush;
   z-index: 1;
   margin: auto;
