--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: brillant;
-  src: url(../fonts/brillant/brillant.otf);
+  src: url(../fonts/fonts/brillant/brillant.otf);
 }
 
 @font-face {
@@ -22,7 +22,7 @@
 
 @font-face {
   font-family: Montserrat;
-  src: url(../fonts/montserrat/Montserrat-Italic.otf);
+  src: url(../fonts/fonts/montserrat/Montserrat-Medium.otf);
 }
 
 @font-face {
@@ -41,11 +41,12 @@
   font-family: moralana;
   src: url(../fonts/fonts/moralana/Moralana\ DEMO.otf);
 }
+/* 
 @font-face {
   font-family: playfair display;
   @import: url ("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Ramabhadra&display=swap");
-}
-@import url("https://fonts.googleapis.com/css2?family=Brillant&family=Courier+New:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400..900;1,400..900&display=swap");
+} */
+/* @import url("https://fonts.googleapis.com/css2?family=Brillant&family=Courier+New:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400..900;1,400..900&display=swap"); */
 
 .courier-prime-regular {
   font-family: "Courier Prime", monospace;
@@ -84,14 +85,14 @@ svg {
   width: 40ch;
 }
 
-h2 {
+h1 {
   font-family: moralana;
   text-align: center;
   color: rgb(0, 0, 0);
   padding: 10px;
   margin: 10px;
 }
-.hvid h2 {
+.hvid h1 {
   font-family: moralana;
   text-align: center;
   color: rgb(255, 255, 255);
