--- a/css/general.css
+++ b/css/general.css
@@ -17,8 +17,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
-  display: block;
+  /* object-position: center;
+  display: block; */
 }
 
 /*        Header placering */
