--- a/css/fonts.css
+++ b/css/fonts.css
@@ -82,7 +82,7 @@
 } */
 
 svg {
-  width: 40ch;
+  width: 50ch;
 }
 
 h1 {
@@ -91,6 +91,8 @@ h1 {
   color: rgb(0, 0, 0);
   padding: 10px;
   margin: 10px;
+
+  size: 20ch;
 }
 .hvid h1 {
   font-family: moralana;
