--- a/css/general.css
+++ b/css/general.css
@@ -32,7 +32,7 @@ header {
   padding-top: 10px;
   padding-bottom: 0;
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
 }
 
 /*      farve baggrund til section */
