--- a/css/cards.css
+++ b/css/cards.css
@@ -99,7 +99,7 @@ button {
   transition: background 0.3s, color 0.3s;
 }
 
-button:hover {
+.knapper button:hover {
   background: white;
   color: black;
 }
