--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,33 @@ nav {
 }
 
 .burger {
+  display: none;
   width: 30px;
   height: 20px;
   cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between; /* Dette er vigtigt! */
+  background-color: transparent;
+  border: none;
+  padding: 0; /* Fjern eventuelt default padding */
+}
+
+.burger .line {
+  display: block;
+  width: 100%;
+  height: 3px; /* Gør dem lidt tykkere så de er lettere at se */
+  background-color: #ffffff;
+  transition: 0.2s linear;
+}
+
+/* 
+.burger {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+
+  min-height: 20px;
+  flex-direction: column;
 }
 
 .burger .line {
@@ -96,13 +120,16 @@ nav {
 }
 .burger {
   display: none;
-}
+} */
 @media screen and (max-width: 800px) {
   .menu {
     display: none;
   }
+
   .burger {
     display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
     background-color: transparent;
     border: 0;
   }
@@ -156,6 +183,7 @@ nav {
 
 /* overlay som rigtigt element */
 .overlay {
+  display: none;
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.25);
