--- a/css/fonts.css
+++ b/css/fonts.css
@@ -136,12 +136,12 @@ p {
   color: rgba(0, 0, 0, 8);
   max-width: 80ch;
 
-  padding: 0.5em 1em;
+  padding: 0.5em 4em;
   margin: 0 auto 1.5em;
   font-size: 1.1rem;
   color: rgb(203, 203, 204);
   line-height: 1.5;
-  text-align: center;
+  text-align: left;
 }
 .cite p {
   text-align: center;
