--- a/css_forside/custom.css
+++ b/css_forside/custom.css
@@ -1,17 +1,39 @@
 .box01 img {
-  min-width: fit-content;
   padding: 2em;
 }
 
-.box02 {
-  height: 100%;
-  margin: auto;
-  display: block;
-  align-content: center;
+/* Billede styling */
+.forsidefoto {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+}
 
-  max-width: fit-content;
+.forsidefoto img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+.box02 {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .box02 img {
-  width: 50%;
+  width: 80%;
+  height: auto;
+  border-radius: 8px;
+}
+
+/* Desktop billeder */
+@media screen and (min-width: 801px) {
+  .box02 img {
+    width: 60%;
+  }
 }
