--- a/css_forside/fonts.css
+++ b/css_forside/fonts.css
@@ -29,24 +29,21 @@
   font-family: barcode;
   src: url(../fonts/code-2-of-5-interleaved/code25I.ttf);
 }
+
 @font-face {
   font-family: bastliga one;
   src: url(../fonts/fonts/bastliga-one/Bastliga\ One.ttf);
 }
+
 @font-face {
   font-family: blow brush;
   src: url(../fonts/fonts/blowbrush/blowbrush.ttf);
 }
+
 @font-face {
   font-family: moralana;
   src: url(../fonts/fonts/moralana/Moralana\ DEMO.otf);
 }
-/* 
-@font-face {
-  font-family: playfair display;
-  @import: url ("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Ramabhadra&display=swap");
-} */
-/* @import url("https://fonts.googleapis.com/css2?family=Brillant&family=Courier+New:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400..900;1,400..900&display=swap"); */
 
 .courier-prime-regular {
   font-family: "Courier Prime", monospace;
@@ -71,15 +68,6 @@
   font-weight: 700;
   font-style: italic;
 }
-/* 
-.samtekst h1 {
-  font-family: blow brush;
-  text-align: center;
-
-  color: rgba(0, 0, 0, 8);
-  padding: 1em;
-  margin: 2em 0 0 0;
-} */
 
 svg {
   width: 50ch;
@@ -88,12 +76,12 @@ svg {
 h1 {
   font-family: moralana;
   text-align: center;
-  color: rgb(0, 0, 0);
-  padding: 10px;
-  margin: 10px;
-
-  size: 20ch;
+  color: rgb(255, 255, 255);
+  padding: 60px 20px 20px;
+  margin: 0;
+  font-size: clamp(2rem, 5vw, 4rem);
 }
+
 .hvid h1 {
   font-family: moralana;
   text-align: center;
@@ -111,42 +99,71 @@ h3 {
   font-family: brillant;
   text-align: center;
   color: rgba(0, 0, 0, 8);
+  padding: 20px;
+  font-size: clamp(1.5rem, 3vw, 2.5rem);
 }
+
 .andenlys h3 {
   font-family: brillant;
   text-align: center;
   color: rgba(255, 255, 255, 8);
 }
+
 p {
   font-family: Montserrat;
   text-align: center;
   color: rgba(0, 0, 0, 8);
   max-width: 80ch;
-
-  padding: 0.5em 1em;
-  margin: 0 auto 1.5em;
+  padding: 20px;
+  margin: 0 auto;
   font-size: 1.1rem;
   color: rgb(1, 1, 2);
-  line-height: 1.5;
+  line-height: 1.8;
   text-align: center;
 }
+
 .lys p {
   font-family: Montserrat;
   text-align: center;
   color: rgba(0, 0, 0, 8);
   max-width: 80ch;
-
-  padding: 0.5em 4em;
-  margin: 0 auto 1.5em;
+  padding: 20px;
+  margin: 0 auto;
   font-size: 1.1rem;
   color: rgb(203, 203, 204);
   line-height: 1.5;
   text-align: left;
 }
+
 .cite p {
   text-align: center;
 }
 
 .info p {
   align-content: center;
+}
+
+/* Desktop - centreret tekst */
+@media screen and (min-width: 801px) {
+  p {
+    text-align: left;
+    margin: 0;
+  }
+}
+
+/* Mobil specifik styling */
+@media screen and (max-width: 800px) {
+  h1 {
+    font-size: 2rem;
+    padding: 40px 20px 20px;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+    text-align: center;
+  }
 }
