--- a/css_forside/general.css
+++ b/css_forside/general.css
@@ -2,8 +2,9 @@
 .hero {
   position: relative;
   min-height: 70vh;
-  display: grid;
-  align-items: start;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
 
@@ -17,8 +18,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* object-position: center;
-  display: block; */
+  filter: brightness(0.7);
 }
 
 /*        Header placering */
@@ -38,4 +38,19 @@ header {
 /*      farve baggrund til section */
 .bon {
   background-color: #2e0d14;
+}
+
+/* Sections med padding */
+section {
+  padding: 60px 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .hero {
+    min-height: 50vh;
+  }
+
+  section {
+    padding: 40px 20px;
+  }
 }
