ændret fotos i projekt

--- a/css_projekter/galleri.css
+++ b/css_projekter/galleri.css
@@ -8,7 +8,7 @@
   padding: 20px;
 }
 
-/* Projekt Card */
+/* cards på projekt siden */
 .projekt-item {
   position: relative;
   aspect-ratio: 3/4;
