--- a/css_projekter/general.css
+++ b/css_projekter/general.css
@@ -124,6 +124,14 @@ h3 {
   font-size: clamp(1.5rem, 3vw, 2.5rem);
 }
 
+.whitebox h3 {
+  font-family: brillant;
+  text-align: center;
+  color: rgba(10, 9, 9, 0.9);
+  padding: 20px;
+  font-size: clamp(1.5rem, 3vw, 2.5rem);
+}
+
 .andenlys h3 {
   color: rgba(255, 255, 255, 0.9);
 }
@@ -143,7 +151,7 @@ p {
 @media screen and (min-width: 801px) {
   p {
     text-align: left;
-    margin: 0;
+    /* margin: 0;  kommenteret ud, så den ikke forstyrer portfolio p*/
   }
 }
 
