--- a/css_forside/fonts.css
+++ b/css_forside/fonts.css
@@ -145,6 +145,10 @@ p {
 
 /* Desktop - centreret tekst */
 @media screen and (min-width: 801px) {
+  .centermig p {
+    text-align: center;
+    margin: 0;
+  }
   p {
     text-align: left;
     margin: 0;
