--- a/css_projekter/general.css
+++ b/css_projekter/general.css
@@ -1,3 +1,24 @@
+/*          typografi rykket       */
+
+@font-face {
+  font-family: brillant;
+  src: url(../fonts/fonts/brillant/brillant.otf);
+}
+
+@font-face {
+  font-family: Inter;
+  src: url(../fonts/inter/Inter-Italic.otf);
+}
+
+@font-face {
+  font-family: Alumni Sans Pinstripe, stroke;
+  src: url(../fonts/Alumni_Sans_Pinstripe\BBH_Sans_Bartle\Radio_Canada_Big\Ramabhadra/);
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(../fonts/fonts/montserrat/Montserrat-Medium.otf);
+}
 /* Reset og basis styling */
 * {
   margin: 0;
@@ -116,15 +137,24 @@ h1 {
   font-size: clamp(2rem, 5vw, 4rem);
 }
 
-h3 {
+h2 {
   font-family: brillant;
   text-align: center;
   color: rgba(255, 255, 255, 0.9);
   padding: 20px;
   font-size: clamp(1.5rem, 3vw, 2.5rem);
 }
-
-.whitebox h3 {
+h3 {
+  font-family: Alumni Sans Pinstripe, stroke;
+  color: aliceblue;
+  font-size: clamp(1rem, 2vw, 2rem);
+}
+.minibox h3 {
+  font-family: Alumni Sans Pinstripe, stroke;
+  color: rgb(16, 16, 17);
+  font-size: clamp(1rem, 2vw, 2rem);
+}
+.whitebox h2 {
   font-family: brillant;
   text-align: center;
   color: rgba(10, 9, 9, 0.9);
@@ -132,7 +162,7 @@ h3 {
   font-size: clamp(1.5rem, 3vw, 2.5rem);
 }
 
-.andenlys h3 {
+.andenlys h2 {
   color: rgba(255, 255, 255, 0.9);
 }
 
@@ -205,8 +235,11 @@ section {
     padding: 40px 20px 20px;
   }
 
-  h3 {
+  h2 {
     font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1rem;
   }
 
   .grid_2-1 {
