--- a/css_forside/general.css
+++ b/css_forside/general.css
@@ -61,6 +61,13 @@ header {
 }
 
 @media screen and (max-width: 800px) {
+  .hero-section video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    filter: brightness(0.8);
+  }
   .hero {
     min-height: 50vh;
   }
